fixed issue with wrapping divs in anchor tag

--- a/src/styles/projects.module.css
+++ b/src/styles/projects.module.css
@@ -22,9 +22,20 @@
     font-weight: bold;
 }
 
-.projectTitle > a {
+.projectTitle a {
     font-size: 1.5em;
     color: var(--cream);
+}
+
+.projectTitle a::before{
+    content: '';
+    display: block;
+    position: absolute;
+    z-index: 0;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
 }
   
 .projectDescription {
